crates/kul-render/tests/snapshots/corpus__example_01_single_couple.snap
---
source: crates/kul-render/tests/corpus.rs
expression: json
---
{
  "ok": true,
  "schema": 2,
  "kul": "0.1",
  "components": [
    {
      "id": "comp-1",
      "sourceOrder": 262,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "alice",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "Alice Sharma",
            "gender": "female",
            "born": {
              "value": "1950-04-12",
              "precision": "day",
              "circa": false
            }
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_alice_bob",
                "generation": 0,
                "hostId": "alice",
                "joiningId": "bob",
                "joiningSlot": {
                  "personId": "bob",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "Bob Sharma",
                  "gender": "male",
                  "born": {
                    "value": "1948-11-30",
                    "precision": "day",
                    "circa": false
                  }
                },
                "start": {
                  "value": "1972-05-12",
                  "precision": "day",
                  "circa": false
                },
                "ended": false
              },
              "children": []
            }
          ]
        }
      }
    }
  ],
  "edges": []
}
